--- a/html/projects/video-games.html
+++ b/html/projects/video-games.html
@@ -1,64 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alvina DR | Video Games</title>
 
-    <link rel="stylesheet" href="../../css/main.css">
-    <link rel="stylesheet" href="../../css/text.css">
-    <link rel="stylesheet" href="../../css/navbar.css">
-    <link rel="stylesheet" href="../../css/footer.css">
-    <link rel="stylesheet" href="../../css/page-specific-project.css">
-    <link rel="stylesheet" href="../../css/page-video-game.css">
-    <link rel="stylesheet" href="../../css/pointer.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="../../css/main.css" />
+    <link rel="stylesheet" href="../../css/navbar.css" />
+    <link rel="stylesheet" href="../../css/footer.css" />
+    <link rel="stylesheet" href="../../css/page-specific-project.css" />
+    <link rel="stylesheet" href="../../css/page-video-game.css" />
+    <link rel="stylesheet" href="../../css/pointer.css" />
+    <link rel="stylesheet" href="../../css/text.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="cursor-default cursor-hidden"></div>
     <div class="mail-div" id="text-cursor">
-        <p id="text-to-copy">Have a look•Have a look•</p>
+      <p id="text-to-copy">Have a look•Have a look•</p>
     </div>
 
     <!-- NAVBAR -->
     <div class="grid grid-header"></div>
     <navbar>
-        <ul class="nav-ul">
-            <li class="nav-link"><a href="../../index.html">Home</a></li>
-            <li class="nav-link"><a href="../about.html">About</a></li>
-            <li class="nav-link"><a href="../contact.html">Contact</a></li>
-        </ul>
-    </navbar>  
-    
+      <ul class="nav-ul">
+        <li class="nav-link"><a href="../../index.html">Home</a></li>
+        <li class="nav-link"><a href="../about.html">About</a></li>
+        <li class="nav-link"><a href="../contact.html">Contact</a></li>
+      </ul>
+    </navbar>
+
     <div class="grid grid-video-game-1"></div>
     <section id="landing-section">
-        <h1>Video games</h1>
+      <h1>Video games</h1>
     </section>
 
-<!------------------------------------------------------ VIDEO GAME -------------------------------------------->
+    <!------------------------------------------------------ VIDEO GAME -------------------------------------------->
 
-    <div class="div-row" id="filter-btn-container" style="justify-content: flex-start;">
-        <a class="btn1 filter-active-btn" onclick="filterSelection('all')">ALL</a>        
-        <a class="btn1" onclick="filterSelection('work')">WORK</a>
-        <a class="btn1" onclick="filterSelection('school')">SCHOOL</a>
-        <a class="btn1" onclick="filterSelection('jam')">JAM</a>
-        <a class="btn1" onclick="filterSelection('prototype')">PROTOTYPE</a>
-    </div><br>
+    <div
+      class="div-row"
+      id="filter-btn-container"
+      style="justify-content: flex-start"
+    >
+      <a class="btn1 filter-active-btn" onclick="filterSelection('all')">ALL</a>
+      <a class="btn1" onclick="filterSelection('work')">WORK</a>
+      <a class="btn1" onclick="filterSelection('school')">SCHOOL</a>
+      <a class="btn1" onclick="filterSelection('jam')">JAM</a>
+      <a class="btn1" onclick="filterSelection('prototype')">PROTOTYPE</a>
+    </div>
+    <br />
     <section id="video-game-section" class="div-row">
-        <div class="div-grid" id="video-game-container"></div>
+      <div class="div-grid" id="video-game-container"></div>
     </section>
 
     <!-- FOOTER -->
     <footer>
-        <div class="grid grid-footer"></div>
-        <p>Made by Alvina Damasio--Razafiarizaka</p>
+      <div class="grid grid-footer"></div>
+      <p>Made by Alvina Damasio--Razafiarizaka</p>
     </footer>
     <script src="../../data/video-games.js"></script>
     <script src="../../js/video-game-system.js"></script>
     <script src="../../js/mouse-cursor.js"></script>
     <script src="../../js/filter-games.js"></script>
     <script src="../../js/circle-text.js"></script>
-
-</body>
+  </body>
 </html>
